updates del centre again

--- a/delegate-center.html
+++ b/delegate-center.html
@@ -4,16 +4,8 @@ title: Delegate Center
 permalink: /delegate-center/
 ---
 
-<h2>Coming Soon!</h2>
-{% comment %}
 <p>
   The Delegate Center is an area where delegates can get help with any topics dealing with OMUN, and learn more about MUN in general. It will cover topics such as position papers, committee procedure, resolution writing, and more!
-</p>
-
-<h2>Conference Policy</h2>
-
-<p>
-  If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
 </p>
 
 <h2>Position Paper Guidelines</h2>
@@ -23,8 +15,20 @@ permalink: /delegate-center/
 </p>
 
 <p>
-  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date has been extended and is now <b>April 16, 2017</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at omun@ucc.on.ca.
+  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date has been extended and is now <b>March 10, 2018</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
 </p>
+
+<p>
+  Instructions on how to submit position paper and more conference information are coming soon.
+</p>
+
+{% comment %}
+<h2>Conference Policy</h2>
+
+<p>
+  If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
+</p>
+
 
 <h2>Position Paper Submission</h2>
 
