fixing minor thing

--- a/delegate-center.html
+++ b/delegate-center.html
@@ -15,7 +15,7 @@ permalink: /delegate-center/
 </p>
 
 <p>
-  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date has been extended and is now <b>March 10, 2018</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
+  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date is tentatively <b>March 10, 2018</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
 </p>
 
 <p>
