basically pushing a site 2.0

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 title: Error 404, Not Found!
 ---
 <div class="container">
-  <h1 class="page-header">Error 404: Page Not Found</h1>
+  <h1 class="display-4">Error 404: Page Not Found</h1>
   <p class="lead">It seems like you've stumbled upon an error. Either this page doesn't exist, or something's gone horribly wrong at OMUN! You can contact us for more information or support; all of our contact information is in the footer down below.
   </p>
 </div>
