--- a/about.html
+++ b/about.html
@@ -4,47 +4,49 @@ title: About
 permalink: /about/
 ---
 <div class="container">
-  <div class="jumbotron">
+  <div class="card card-body mt-2">
     <div class="row">
       <div class="col-md-4">
-        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_girl.jpg" alt="Delegates at OMUN debating contentious topics and issues."/>
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/david_and_girl.jpg" alt="Delegates at OMUN debating contentious topics and issues."/>
       </div>
       <div class="col-md-8">
-        <h1>About OMUN</h1>
+        <h1 class="display-4">About OMUN</h1>
         <h2>Ontario's Premier MUN Conference</h2>
       </div>
     </div>
   </div>
-  <p>
-    <b>Ontario Model United Nations</b> is Ontario’s premier Model United Nations Conference held at annually Upper Canada College in Toronto, this year, from April 7th to April 8th. Building on a successful conference last year, OMUN is committed to providing delegates with a conference experience that will suit a wide range of Model UN skill levels and interests. OMUN committees will focus not only on some of the most pressing issues of today, but also on those of the past and future. OMUN III will feature innovative Crisis Committees, interactive General Assemblies, and debate-filled Specialized Agencies, and provide stimulating committees for all delegates. Delegates should look forward to a weekend of exciting debate and negotiation, as well as challenges that will force them to think critically to find solutions.
-  </p>
+  <div class="card card-body mt-2">
+    <p>
+      <b>Ontario Model United Nations</b> is Ontario’s premier Model United Nations Conference held at annually Upper Canada College in Toronto, this year, from April 7th to April 8th. Building on a successful conference last year, OMUN is committed to providing delegates with a conference experience that will suit a wide range of Model UN skill levels and interests. OMUN committees will focus not only on some of the most pressing issues of today, but also on those of the past and future. OMUN III will feature innovative Crisis Committees, interactive General Assemblies, and debate-filled Specialized Agencies, and provide stimulating committees for all delegates. Delegates should look forward to a weekend of exciting debate and negotiation, as well as challenges that will force them to think critically to find solutions.
+    </p>
 
-  <p>
-    Born out of Upper Canada College's previous two events, UCC Model United Nations (UMUN) and Ontario Model Parliament (OMP), which ran for a combined 40 years, OMUN provides a uniquely Ontarian focus to Model United Nations. Each year, in addition to crisis committees and specialized agencies, OMUN offers a simulation that includes the Ontario provincial government. In this way, OMUN stays true to its roots, and helps educate its delegates on the body that governs Canada's largest province.
-  </p>
+    <p>
+      Born out of Upper Canada College's previous two events, UCC Model United Nations (UMUN) and Ontario Model Parliament (OMP), which ran for a combined 40 years, OMUN provides a uniquely Ontarian focus to Model United Nations. Each year, in addition to crisis committees and specialized agencies, OMUN offers a simulation that includes the Ontario provincial government. In this way, OMUN stays true to its roots, and helps educate its delegates on the body that governs Canada's largest province.
+    </p>
 
-  <p>
-    OMUN is a unique and exciting conference, with committees tailoring to every delegate: ranging from the General Assembly-sized WHO or DISEC, to the Specialized Agencies such as the UNSC or FAO, to Crisis-styled committees such as Richard Nixon's Presidential Cabinet or the Medellin Cartel.
-  </p>
+    <p>
+      OMUN is a unique and exciting conference, with committees tailoring to every delegate: ranging from the General Assembly-sized WHO or DISEC, to the Specialized Agencies such as the UNSC or FAO, to Crisis-styled committees such as Richard Nixon's Presidential Cabinet or the Medellin Cartel.
+    </p>
 
-  <p>
-    The conference is run by true MUN veterans; the secretariat are all members of North America's best MUN delegation, one undefeated at major conferences in more than 3 years (with wins at Harvard (HMUN), Berkeley (BMUN), Columbia (CMUNCE), and McGill (SSUNS)).
-  </p>
+    <p>
+      The conference is run by true MUN veterans; the secretariat are all members of North America's best MUN delegation, one undefeated at major conferences in more than 3 years (with wins at Harvard (HMUN), Berkeley (BMUN), Columbia (CMUNCE), and McGill (SSUNS)).
+    </p>
 
-  <p>
-    OMUN aims to bring forward unparalleled debate and unique solutions. Its delegates will leave the conference with new knowledge, friends, and memories. With the best committees, staff, and delegates in Ontario, we hope to provide the best Model United Nations experience possible.
-  </p>
+    <p>
+      OMUN aims to bring forward unparalleled debate and unique solutions. Its delegates will leave the conference with new knowledge, friends, and memories. With the best committees, staff, and delegates in Ontario, we hope to provide the best Model United Nations experience possible.
+    </p>
 
-  <h3>About OMUN II (2017)</h3>
+    <h3>About OMUN II (2017)</h3>
 
-  <p>
-    Building on our success with OMUN I, OMUN II has gone a long way in solidifying OMUN as Ontario’s premier Model UN Conference. With over 300 delegates from Ontario and beyond debating and engaging with issues ranging from outer space security to WikiLeaks in a number of unique committees. Congratulations, once again, to Oakville Trafalgar School for winning best large delegation and Monarch Park for winning best small delegation. We would like to thanks all delegates for their amazing contributions in committee and their commitment to finding solutions to some of the most pressing issues in the world today. We look forward to seeing all of you at OMUN III!
-  </p>
+    <p>
+      Building on our success with OMUN I, OMUN II has gone a long way in solidifying OMUN as Ontario’s premier Model UN Conference. With over 300 delegates from Ontario and beyond debating and engaging with issues ranging from outer space security to WikiLeaks in a number of unique committees. Congratulations, once again, to Oakville Trafalgar School for winning best large delegation and Monarch Park for winning best small delegation. We would like to thanks all delegates for their amazing contributions in committee and their commitment to finding solutions to some of the most pressing issues in the world today. We look forward to seeing all of you at OMUN III!
+    </p>
 
-  <h3>About OMUN I (2016)</h3>
+    <h3>About OMUN I (2016)</h3>
 
-  <p>
-    OMUN I was a great success. The 250+ delegates attending from 20 schools around Ontario had an incredible time debating a wide array of issues. With committees ranging from the World Health Organization to NATO to the Medellin Cartel, OMUN I succeeded in both provoking great debate and inspiring incredible solutions. <i>Congratulations go to the Oakville Trafalgar School</i> for winning Best Large Delegation. Commendations are also in order for all of the delegates who attended, as their hard work and dedication paid off to create an amazing weekend. We can't wait to see you all at OMUN II!
-  </p>
+    <p>
+      OMUN I was a great success. The 250+ delegates attending from 20 schools around Ontario had an incredible time debating a wide array of issues. With committees ranging from the World Health Organization to NATO to the Medellin Cartel, OMUN I succeeded in both provoking great debate and inspiring incredible solutions. <i>Congratulations go to the Oakville Trafalgar School</i> for winning Best Large Delegation. Commendations are also in order for all of the delegates who attended, as their hard work and dedication paid off to create an amazing weekend. We can't wait to see you all at OMUN II!
+    </p>
+  </div>
 
 </div>
