--- a/delegate-center.html
+++ b/delegate-center.html
@@ -1,39 +1,43 @@
 ---
-layout: page
+layout: default
 title: Delegate Center
 permalink: /delegate-center/
 ---
+<div class="container">
+  <div class="card card-body mt-2">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/picturesque_room.jpg" alt="Delegates working hard in their committee."/>
+      </div>
+      <div class="col-md-8">
+        <h1 class="display-4">Delegate Center</h1>
+        <p>
+          The Delegate Center is an area where delegates can get help with any topics dealing with OMUN. It will cover topics such as position papers, committee procedure, resolution writing, and more!
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="card card-body mt-2">
+    <h2>Position Paper Guidelines</h2>
+    <p>
+      A good position paper should properly cover and outline a country or person’s standpoint or views on a specific topic. Your position paper should begin with a brief overview of the topic, your country/person’s stance on the issue and potential solutions to the topic. Proper research is necessary for writing a position paper, and a position paper is often a useful tool to refer to during a conference. In addition to proper research, it is mandatory for all delegates to have citations at the end of their position paper. In addition to ensuring that no plagiarism is involved in the paper, having good sources is vital for proper research and a successful position paper.
+    </p>
+    <p>
+      In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date is tentatively <b>March 15, 2018</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
+    </p>
+    <p>
+      Instructions on how to submit position paper and more conference information is coming soon.
+    </p>
+    {% comment %}
+    <h2>Conference Policy</h2>
+    <p>
+      If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
+    </p>
+    <h2>Position Paper Submission</h2>
+    <p>
+      Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>March 15, 2018</b>.
+    </p>
 
-<p>
-  The Delegate Center is an area where delegates can get help with any topics dealing with OMUN, and learn more about MUN in general. It will cover topics such as position papers, committee procedure, resolution writing, and more!
-</p>
-
-<h2>Position Paper Guidelines</h2>
-
-<p>
-  A good position paper should properly cover and outline a country or person’s standpoint or views on a specific topic. Your position paper should begin with a brief overview of the topic, your country/person’s stance on the issue and potential solutions to the topic. Proper research is necessary for writing a position paper, and a position paper is often a useful tool to refer to during a conference. In addition to proper research, it is mandatory for all delegates to have citations at the end of their position paper. In addition to ensuring that no plagiarism is involved in the paper, having good sources is vital for proper research and a successful position paper.
-</p>
-
-<p>
-  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date is tentatively <b>March 15, 2018</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
-</p>
-
-<p>
-  Instructions on how to submit position paper and more conference information are coming soon.
-</p>
-
-{% comment %}
-<h2>Conference Policy</h2>
-
-<p>
-  If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
-</p>
-
-
-<h2>Position Paper Submission</h2>
-
-<p>
-  Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>March 15, 2018</b>.
-</p>
-
-{% endcomment %}
+    {% endcomment %}
+  </div>
+</div>
