--- a/faq.html
+++ b/faq.html
@@ -1,38 +1,43 @@
 ---
-layout: page
+layout: default
 title: Frequenty Asked Questions
 permalink: /faq/
 ---
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  Have a question? Check it out if it's here! If it isn't, feel free to contact us on social media, or <a href="mailto:omun@ucc.on.ca">email us</a>.
-  <h2>General</h2>
-  {% for item in site.data.faq %}{% if item[1].type == "general" %}
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{item[0]}}">
-            {{ item[1].question }}
-          </a></h3>
+<div class="container">
+  <div class="card card-body mt-2">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/unsc_committee.jpg" alt="Delegates debating big questions."/>
       </div>
-       <div id="collapse{{item[0]}}" class="panel-collapse collapse" role="tabpanel">
-        <div class="panel-body">
-          {{ item[1].answer | markdownify }}
-        </div>
+      <div class="col-md-8">
+        <h1 class="display-4">Frequenty Asked Questions</h1>
+        <p>
+          Have a question? Check it out if it's here! If it isn't, feel free to contact us on social media, or <a href="mailto:omun@ucc.on.ca">email us</a>.
+        </p>
       </div>
     </div>
-  {% endif %}{% endfor %}
-  <h2>Committee</h2>
-  {% for item in site.data.faq %}{% if item[1].type == "committee" %}
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{item[0]}}">
-            {{ item[1].question }}
-          </a></h3>
-      </div>
-       <div id="collapse{{item[0]}}" class="panel-collapse collapse" role="tabpanel">
-        <div class="panel-body">
-          {{ item[1].answer | markdownify }}
+  </div>
+  {% for category in site.data.faq %}
+    <div class="card card-body mt-2">
+      <h2>{{ category[0] | capitalize }}</h2>
+      <div id="accordion-{{category[0] | replace: ' ',''}}" role="tablist" aria-multiselectable="true">
+        {% for question in category[1] %}
+        <div class="card mt-1">
+          <a data-toggle="collapse" data-parent="#accordion-{{category[0] | replace: ' ',''}}" href="#collapse-{{question[0]}}" aria-expanded="true" aria-controls="collapse-{{question[0]}}">
+            <div class="card-header" role="tab" id="heading-{{question[0]}}">
+              <h5 class="mb-0">
+                  {{question[1].question}}
+              </h5>
+            </div>
+          </a>
+          <div id="collapse-{{question[0]}}" class="collapse" role="tabpanel" aria-labelledby="heading-{{question[0]}}">
+            <div class="card-body">
+              {{question[1].answer | markdownify}}
+            </div>
+          </div>
         </div>
+        {% endfor %}
       </div>
     </div>
-  {% endif %}{% endfor %}
+  {% endfor %}
 </div>
