changes header hierarchy

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@ layout: default
 </script>
 <img class="d-none d-lg-block img-fluid" src="{{site.baseurl}}/img/omun-pan.png" alt="An image of the Upper Canada College Campus, the location where OMUN is held."/>
 <div class="container">
-  <div class="d-block d-lg-none" >
+  <div class="d-block d-lg-none text-center">
     <img class="img-fluid d-block d-lg-none mx-auto" src="{{site.baseurl}}/img/omun.png" alt="The OMUN Logo!"/>
-    <h1 class="display-4 text-center">Ontario Model United Nations III</h1>
-    <h2 class="display-4 text-center">April 7th-8th at Upper Canada College</h2>
+    <h1 class="display-4 text-center">OMUN III</h1>
+    <h2>April 7th-8th</h2>
+    <h3>Upper Canada College</h3>
+    <hr />
   </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
