minor team updates

--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@ permalink: /team/
       {% if item[1].photo %}
       <img class="card-img-top rounded" src="{{site.baseurl}}/img/staff/{{ item[1].photo }}" alt="Photo of {{ item[1].name }}">
       {% else %}
-      <img class="card-img-top rounded" src="{{site.baseurl}}/img/staff/mwang.jpg" alt="Photo of {{ item[1].name }}">
+      <img class="card-img-top rounded" src="{{site.baseurl}}/img/staff/avatar.jpg" alt="Photo of {{ item[1].name }}">
       {% endif %}
       <div class="card-body">
         <h3 class="card-title">{{ item[1].name }}</h3>
