--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ permalink: /about/
   <div class="card card-body mt-2">
     <div class="row">
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="{{site.baseurl}}/img/david_and_girl.jpg" alt="Delegates at OMUN debating contentious topics and issues."/>
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/america_committee.jpg" alt="Delegates at OMUN debating contentious topics and issues."/>
       </div>
       <div class="col-md-8">
         <h1 class="display-4">About OMUN</h1>
