--- a/index.html
+++ b/index.html
@@ -37,16 +37,6 @@ layout: default
   </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <h1 class="display-4 text-center mt-3">What is OMUN?</h1>
-      <p class="lead">
-        Ontario Model United Nations is Ontario’s premier Model United Nations Conference held at annually Upper Canada College in Toronto, this year, from April 7th to April 8th.
-      </p>
-      <p class="lead">
-        Building on a successful conference last year, OMUN is committed to providing delegates with a conference experience that will suit a wide range of Model UN skill levels and interests. OMUN committees will focus not only on some of the most pressing issues of today, but also on those of the past and future. OMUN III will feature innovative Crisis Committees, interactive General Assemblies, and debate-filled Specialized Agencies, and provide stimulating committees for all delegates. Delegates should look forward to a weekend of exciting debate and negotiation, as well as challenges that will force them to think critically to find solutions.
-      </p>
-      <p class="lead">
-        For more information regarding OMUN’s committees, logistics or registration, don’t hesitate to check out our advisor package or email us at omun@ucc.on.ca.
-      </p>
       <h1 class="display-4 text-center my-3">OMUN by the numbers</h1>
       <div class="row text-center">
         <div class="col-md-3">
@@ -74,6 +64,16 @@ layout: default
           </p>
         </div>
       </div>
+      <h1 class="display-4 text-center mt-3">What is OMUN?</h1>
+      <p class="lead">
+        Ontario Model United Nations is Ontario’s premier Model United Nations Conference held at annually Upper Canada College in Toronto, this year, from April 7th to April 8th.
+      </p>
+      <p class="lead">
+        Building on a successful conference last year, OMUN is committed to providing delegates with a conference experience that will suit a wide range of Model UN skill levels and interests. OMUN committees will focus not only on some of the most pressing issues of today, but also on those of the past and future. OMUN III will feature innovative Crisis Committees, interactive General Assemblies, and debate-filled Specialized Agencies, and provide stimulating committees for all delegates. Delegates should look forward to a weekend of exciting debate and negotiation, as well as challenges that will force them to think critically to find solutions.
+      </p>
+      <p class="lead">
+        For more information regarding OMUN’s committees, logistics or registration, don’t hesitate to check out our <a href="{{site.baseurl}}/files/advisor_package.pdf">advisor package</a> or email us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
+      </p>
     </div>
   </div>
 </div>
