--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@ permalink: /team/
   <div class="card card-body mt-2">
     <div class="row">
       <div class="col-md-4">
-        <img class="img-fluid rounded" src="{{site.baseurl}}/img/will_and_alex.jpg" alt="Staff at OMUN working hard!"/>
+        <img class="img-fluid rounded" src="{{site.baseurl}}/img/new_omun_staff.jpg" alt="Staff at OMUN working hard!"/>
       </div>
       <div class="col-md-8">
         <h1 class="display-4">OMUN Team</h1>
