cheats uche in since the last row behaves weirdly

--- a/team.html
+++ b/team.html
@@ -34,4 +34,17 @@ permalink: /team/
     </div>
   {% cycle 'group2': '','','', '</div>' %}
   {% endfor %}
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card my-2">
+        <img class="card-img-top rounded" src="/img/staff/avatar.jpg" alt="Photo of Uche Ochuba">
+        <div class="card-body">
+          <h3 class="card-title">Uche Ochuba</h3>
+          <p class="card-text">
+            Director of Delegate Affairs
+          <p/>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
