--- a/_committees/index.html
+++ b/_committees/index.html
@@ -5,7 +5,7 @@ type: info
 ---
 
 <div class="container">
-  <div class="card card-body">
+  <div class="card card-body mt-2">
     <div class="row">
       <div class="col-md-4">
         <img class="img-fluid rounded" src="{{site.baseurl}}/img/david_and_friends.jpg" alt="OMUN delegates presenting a resolution in committee."/>
@@ -24,10 +24,13 @@ type: info
       <table class="table" data-toggle="table">
         <thead>
           <tr>
-            <th data-field="name" data-sortable="true">Committee Name</th>
-            <th data-field="type" data-sortable="true">Committee Type</th>
-            <th data-field="size" data-sortable="true">Committee Size</th>
-            <th>Committee Description</th>
+            <th data-field="name" data-sortable="true">Name</th>
+            <th data-field="type" data-sortable="true">Type</th>
+            <th data-field="size" data-sortable="true">Size</th>
+            <th>Description</th>
+            {% if site.guide %}
+            <th>Guide</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody>
@@ -37,6 +40,9 @@ type: info
             <td>{{ committee.type }} {% if committee.double %}(Double Delegation){% endif %}</td>
             <td>{{ committee.size }} {% if committee.double %}Teams{% else %}Delegates{% endif %}</td>
             <td>{{ committee.shortbio }}</td>
+            {% if site.guide %}
+            <td class="text-center"><a href="{{ site.baseurl }}/files/committees/{{page.short}}-BG-OMUN-{{site.year}}.pdf"><i class="fa fa-link"></i></a></td>
+            {% endif %}
           </tr>
           {% endunless %}{% endfor %}
         </tbody>
