adds pp submission info

--- a/delegate-center.html
+++ b/delegate-center.html
@@ -25,17 +25,14 @@ permalink: /delegate-center/
     <p>
       In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date is the day of the conference, <strong>April 6th</strong>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at <a href="mailto:omun@ucc.on.ca">omun@ucc.on.ca</a>.
     </p>
+    <h2>Position Paper Submission</h2>
     <p>
-      Instructions on how to submit position paper and more conference information is coming soon.
+      Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>April 6th, 2018</b>.
     </p>
     {% comment %}
     <h2>Conference Policy</h2>
     <p>
       If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
-    </p>
-    <h2>Position Paper Submission</h2>
-    <p>
-      Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>March 15, 2018</b>.
     </p>
 
     {% endcomment %}
