adds rules of procedure

--- a/delegate-center.html
+++ b/delegate-center.html
@@ -37,4 +37,8 @@ permalink: /delegate-center/
 
     {% endcomment %}
   </div>
+  <div class="card card-body mt-2">
+    <h2>Rules of Procedure</h2>
+    <p>If you're interested in our Rules of Procedure, you can find them <a href="{{site.baseurl}}/files/rules_of_procedure.pdf">here</a>. We will also distribute copies on the day of the conference, and have a summarized version on each placard.</p>
+  </div>
 </div>
