--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ type: "index"
     <h3>Upper Canada College</h3>
     <hr />
   </div>
+  <div class="alert alert-dismissible alert-info mt-2">
+    <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
+  </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <h1 class="display-4 text-center my-3">OMUN by the numbers</h1>
