--- a/schedule.html
+++ b/schedule.html
@@ -1,41 +1,40 @@
 ---
-layout: default
+layout: page
 title: Schedule
 permalink: /schedule/
-published: false
 ---
 <!--
 <div class="alert alert-success" role="alert">
   Want a PDF copy? View and download one <a href="{{site.baseurl}}/files/schedule.pdf">here.</a>
 </div>
 -->
-<h2>Saturday April 22nd, 2017</h2>
-<ul class="list-schedule">
+<h2>Saturday April 7th, 2018</h2>
+<ul class="list-unstyled">
   <li>
     8:15am – 9:00am: Registration and Check-In
   </li>
   <li>
-  9:00am – 10:00am: Opening Ceremonies
+    9:00am – 9:30am: Opening Ceremonies
   </li>
   <li>
-    10:15am – 12:30pm: Committee Session 1
+    9:30am – 11:30am: Committee Session 1
   </li>
   <li>
-    12:30pm – 2:00pm: Lunch (off-site)
+    11:30am – 1:00pm: Lunch (off-site)
   </li>
   <li>
-    2:00pm – 4:00pm: Committee Session 2
+    1:00pm – 3:00pm: Committee Session 2
   </li>
   <li>
-    4:00pm – 4:30pm: Break
+    3:00pm – 3:30pm: Break
   </li>
   <li>
-    4:30pm – 6:00pm: Committee Session 3
+    3:30pm – 5:30pm: Committee Session 3
   </li>
 </ul>
 
-<h2>Sunday April 23rd, 2017</h2>
-<ul class="list-schedule">
+<h2>Sunday April 8th, 2018</h2>
+<ul class="list-unstyled">
   <li>
     9:30am – 11:30am: Committee Session 4
   </li>
@@ -46,9 +45,9 @@ published: false
     1:30pm – 3:00pm: Committee Session 5
   </li>
   <li>
-    3:00pm – 3:45pm: Break
+    3:00pm – 3:15pm: Break
   </li>
   <li>
-    3:45pm – 4:45pm: Closing Ceremonies
+    3:15pm – 4:15pm: Closing Ceremonies
   </li>
 </ul>
