adds schedule notification

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@ type: "index"
     <h3>Upper Canada College</h3>
     <hr />
   </div>
-  <div class="alert alert-dismissible alert-info mt-2">
+  <div class="alert alert-info mt-2">
     <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
+  </div>
+  <div class="alert alert-primary mt-2">
+    Our schedule is up now, on our <a href="{{site.baseurl}}/schedule/">schedule tab</a>.
   </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
