--- a/_committees/index.html
+++ b/_committees/index.html
@@ -19,34 +19,32 @@ type: info
       </div>
     </div>
   </div>
-  <div class="card card-body mt-2">
-    <div class="table-responsive">
-      <table class="table" data-toggle="table">
-        <thead>
-          <tr>
-            <th data-field="name" data-sortable="true">Name</th>
-            <th data-field="type" data-sortable="true">Type</th>
-            <th data-field="size" data-sortable="true">Size</th>
-            <th>Description</th>
-            {% if site.guide %}
-            <th>Guide</th>
-            {% endif %}
-          </tr>
-        </thead>
-        <tbody>
-          {% for committee in site.committees %}{% unless committee.type == 'info' %}
-          <tr>
-            <td><a href="{{ committee.url | prepend: site.baseurl }}">{{ committee.title }} </a></td>
-            <td>{{ committee.type }} {% if committee.double %}(Double Delegation){% endif %}</td>
-            <td>{{ committee.size }} {% if committee.double %}Teams{% else %}Delegates{% endif %}</td>
-            <td>{{ committee.shortbio }}</td>
-            {% if site.guide %}
-            <td class="text-center"><a href="{{ site.baseurl }}/files/committees/{{committee.short}}-BG-OMUN-{{site.year}}.pdf"><i class="fa fa-link"></i></a></td>
-            {% endif %}
-          </tr>
-          {% endunless %}{% endfor %}
-        </tbody>
-      </table>
-    </div>
+  <div class="table-responsive mt-2">
+    <table class="table" data-toggle="table">
+      <thead>
+        <tr>
+          <th data-field="name" data-sortable="true">Name</th>
+          <th data-field="type" data-sortable="true">Type</th>
+          <th data-field="size" data-sortable="true">Size</th>
+          <th>Description</th>
+          {% if site.guide %}
+          <th>Guide</th>
+          {% endif %}
+        </tr>
+      </thead>
+      <tbody>
+        {% for committee in site.committees %}{% unless committee.type == 'info' %}
+        <tr>
+          <td><a href="{{ committee.url | prepend: site.baseurl }}">{{ committee.title }} </a></td>
+          <td>{{ committee.type }} {% if committee.double %}(Double Delegation){% endif %}</td>
+          <td>{{ committee.size }} {% if committee.double %}Teams{% else %}Delegates{% endif %}</td>
+          <td>{{ committee.shortbio }}</td>
+          {% if site.guide %}
+          <td class="text-center"><a href="{{ site.baseurl }}/files/committees/{{committee.short}}-BG-OMUN-{{site.year}}.pdf"><i class="fa fa-link"></i></a></td>
+          {% endif %}
+        </tr>
+        {% endunless %}{% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
