minor files update + FAQ flesh out

--- a/schedule.html
+++ b/schedule.html
@@ -1,53 +1,56 @@
 ---
-layout: page
+layout: default
 title: Schedule
 permalink: /schedule/
 ---
-<!--
-<div class="alert alert-success" role="alert">
-  Want a PDF copy? View and download one <a href="{{site.baseurl}}/files/schedule.pdf">here.</a>
-</div>
--->
-<h2>Saturday April 7th, 2018</h2>
-<ul class="list-unstyled">
-  <li>
-    8:15am – 9:00am: Registration and Check-In
-  </li>
-  <li>
-    9:00am – 9:30am: Opening Ceremonies
-  </li>
-  <li>
-    9:30am – 11:30am: Committee Session 1
-  </li>
-  <li>
-    11:30am – 1:00pm: Lunch (off-site)
-  </li>
-  <li>
-    1:00pm – 3:00pm: Committee Session 2
-  </li>
-  <li>
-    3:00pm – 3:30pm: Break
-  </li>
-  <li>
-    3:30pm – 5:30pm: Committee Session 3
-  </li>
-</ul>
+<div class="container">
+  <div class="card card-body">
+    <h1>Schedule</h1>
+    <p class="lead">
+      Want a PDF copy? View and download one <a href="{{site.baseurl}}/files/schedule.pdf">here.</a>
+    </p>
+    <h2>Saturday April 7th, 2018</h2>
+    <ul class="list-unstyled">
+      <li>
+        8:15am – 9:00am: Registration and Check-In
+      </li>
+      <li>
+        9:00am – 9:30am: Opening Ceremonies
+      </li>
+      <li>
+        9:30am – 11:30am: Committee Session 1
+      </li>
+      <li>
+        11:30am – 1:00pm: Lunch (off-site)
+      </li>
+      <li>
+        1:00pm – 3:00pm: Committee Session 2
+      </li>
+      <li>
+        3:00pm – 3:30pm: Break
+      </li>
+      <li>
+        3:30pm – 5:30pm: Committee Session 3
+      </li>
+    </ul>
 
-<h2>Sunday April 8th, 2018</h2>
-<ul class="list-unstyled">
-  <li>
-    9:30am – 11:30am: Committee Session 4
-  </li>
-  <li>
-    11:30am – 1:30pm: Lunch (off-site)
-  </li>
-  <li>
-    1:30pm – 3:00pm: Committee Session 5
-  </li>
-  <li>
-    3:00pm – 3:15pm: Break
-  </li>
-  <li>
-    3:15pm – 4:15pm: Closing Ceremonies
-  </li>
-</ul>
+    <h2>Sunday April 8th, 2018</h2>
+    <ul class="list-unstyled">
+      <li>
+        9:30am – 11:30am: Committee Session 4
+      </li>
+      <li>
+        11:30am – 1:30pm: Lunch (off-site)
+      </li>
+      <li>
+        1:30pm – 3:00pm: Committee Session 5
+      </li>
+      <li>
+        3:00pm – 3:15pm: Break
+      </li>
+      <li>
+        3:15pm – 4:15pm: Closing Ceremonies
+      </li>
+    </ul>
+  </div>
+</div>
