--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@ type: "index"
     <hr />
   </div>
   <div class="alert alert-info mt-2">
-    <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
-  </div>
-  <div class="alert alert-primary mt-2">
-    Our schedule is up now, on our <a href="{{site.baseurl}}/schedule/">schedule tab</a>.
+    This is an archive of what the omun.ca website looked like as of April 8th, 2018.
   </div>
   <div class="row">
     <div class="col-md-8 offset-md-2">
